--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.167.1"
   },
